--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,3 +9,13 @@ services:
       - POSTGRES_DB=test
     ports:
       - 5433:5432
+  redis:
+    image: 'redis:latest'
+    ports:
+      - 6380:6379
+    volumes:
+      - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      retries: 3
+      timeout: 5s
